# ankizh

./: .gitignore  .gitmodules  Cargo.toml  README.md  a.py  a.txt  b.txt  test.html
anki-canvas/: back.js  deck.apkg  front.js  options.js
canvas/: canvas.ts  compile.sh  test.html
oldweb/: comp.sh  drawingBoard.js  old.ts  test.html
res/: allsetlearning_grammar_keywords.json
src/: allsetlearning.rs  anim_cjk.rs  anki.rs  audio.rs  cedict.rs  common.rs  dong.rs  freq.rs  freq2.rs  hsk.rs  lp_grammar.rs  main.rs  makemeahanzi.rs  pinyin_type.rs  tatoeba.rs  unihan.rs  utils.rs
web/: Cargo.toml  index.html
web/src/: canvas.rs  lib.rs  utils.rs
web/src/hanzi_lookup/: analyzed_character.rs  cubic_curve_2d.rs  entities.rs  match_collector.rs  matcher.rs  mod.rs
