#workspace = { members = ["web"] }
[package]
name = "ankizh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
genanki-rs = "0.4"
indexmap = {version = "2.2.6", features = ["serde"]}
lyon_path = "1"
ordered-float = {version = "4.2.0", features = ["serde"]}
pinyin-parser = "0.1.9"
prettify_pinyin = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0", features = ["preserve_order"]}

