#workspace = { members = ["web"] }
[package]
name = "ankizh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_format = "0.2.32"
csv = "1.3.0"
enum_dispatch = "0.3.13"
genanki-rs = "0.4"
itertools = "0.13.0"
jieba-rs = "0.7.0"
lyon_path = "1"
ordered-float = {version = "4.2.0", features = ["serde"]}
pinyin = "0.10.0"
pinyin-parser = "0.1.9"
prettify_pinyin = "2.0.0"
ptrie = "0.7.0"
ron = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0", features = ["preserve_order"]}
unicode_names2 = "1.2.2"

