[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["cdylib"]

[dependencies]
wasm-bindgen="0.2"
web-sys={version="0.3", features=["Document","Element","HtmlElement","Node","Window","Storage","HtmlCanvasElement","CanvasRenderingContext2d","EventTarget","Event","MouseEvent","Text","DomTokenList"]}


bincode = "2.0.0-rc.3"

